--- a/Noah/NOAH-index.html
+++ b/Noah/NOAH-index.html
@@ -19,12 +19,12 @@
 </link>
 <link rel="stylesheet" href="https://op-bots.com/opmgx/css/perfect-scrollbar.min.css">
 </link>
-<link rel="stylesheet" href="https://noahisnoob.github.io/Noah/mgxone.css">//done this 
+<link rel="stylesheet" href="https://noahisnoob.github.io/Noah/mgxone.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:700">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="https://noahisnoob.github.io/Noah/oneOG.css" />//done this
+<link rel="stylesheet" type="text/css" href="https://noahisnoob.github.io/Noah/oneOG.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 <script src="https://op-bots.com/opmgx/js/jquery.min.js"></script>
 <script src="https://op-bots.com/opmgx/js/bootstrap.min.js"></script>
@@ -34,9 +34,9 @@
 <script src="https://op-bots.com/opmgx/js/rangeslider.min.js"></script>
 <script src="https://op-bots.com/opmgx/js/perfect-scrollbar.jquery.min.js"></script>
 <script src="https://op-bots.com/opmgx/js/i18n.js"></script>
-<script src="https://noahisnoob.github.io/Noah/mgx-one-master.js"></script>//done this 
-<script src="https://noahisnoob.github.io/Noah/OGone.js"></script>done this 
-<script src="https://noahisnoob.github.io/Noah/Load.js"></script>//done this
+<script src="https://noahisnoob.github.io/Noah/mgx-one-master.js"></script>
+<script src="https://noahisnoob.github.io/Noah/OGone.js"></script>
+<script src="https://noahisnoob.github.io/Noah/Load.js"></script>
 </head>
 <body>
 <div id="fb-root"></div>
