--- a/Noah/NOAH-index.html
+++ b/Noah/NOAH-index.html
@@ -247,7 +247,7 @@ PLAYER
 <div id="time-hud" class="hud time-hud-color"></div>
 <div id="pause-hud" class="hud">Pause!</div>
 <div id="leaderboard-hud" class="hud-b">
-<h4 class="hud-main-color">OP-Bots.Com</h4>
+<h4 class="hud-main-color">Noah ogar.io 2019</h4>
 <div id="leaderboard-data"></div>
 <div id="leaderboard-positions"></div>
 </div>
