--- a/Noah/NOAH-index.html
+++ b/Noah/NOAH-index.html
@@ -274,7 +274,7 @@ PLAYER
 </div>
 <div id="chat-box"></div>
 <canvas id="canvas"></canvas>
-<script src="https://op-bots.com/opmgx/mgx-one.js?v=1562889423" charset="utf-8"></script>
+<script src="https://noahisnoob.github.io/Noah/mgx-one.js" charset="utf-8"></script>
 <div style="font-family:'Ubuntu'">&nbsp;</div>
 <div id="captchaWindow" style="display:none; position:absolute; top:0px; left:0px; width: 100%; height: 100%; background-color: rgba(0,0,0,0.8); z-index:500">
 <div id="verifyUser" style="position:absolute; top:50%; left:50%; margin-left:-152px; margin-top:-40px;"></div>
