--- a/wha/test.html
+++ b/wha/test.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <meta http-equiv="refresh" content="1;URL=index.html">
@@ -8,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Agar.io</title>
-    <link id="favicon" rel="icon" type="image/png" href="http://agarslut.tk/ananisikiyim3113131/favicon-32x32.png" />
+    <link id="favicon" rel="icon" type="image/png" href="png" />
     <link rel="stylesheet" href="https://jimboy3100.github.io/ExampleScripts/ananisikiyim3113131/master.css">
     <link rel="stylesheet" href="https://jimboy3100.github.io/bootstrap-colorpicker.min.css">
     </link>
@@ -37,14 +35,15 @@
     <script src="http://agarslut.tk/ananisikiyim3113131/static/js/i18n.js"></script> ////NOAH CHANGE HERE
     <script src="https://jimboy3100.github.io/ExampleScripts/ananisikiyim3113131/mgx-one.master.js"></script>
     <script src="https://jimboy3100.github.io/ExampleScripts/ananisikiyim3113131/x123x.js"></script>
-    <script src="http://agarslut.tk/ananisikiyim3113131/load/load.js"></script>
+    <script src="https://jimboy3100.github.io/ExampleScripts/ananisikiyim3113131/load.js"></script>
 </head>
 
 <body>
     <div id="fb-root"></div>
     <div id="imagebig">
-        <iframe id="loaderIframeIcon1" src="https://jimboy3100.github.io/ExampleScripts/ananisikiyim3113131/loadd/" name="CodePen" allowfullscreen="true" sandbox="allow-scripts allow-pointer-lock allow-same-origin allow-popups allow-modals allow-forms" allowtransparency="true" scrolling="no" frameBorder="0" class="result-iframe" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:9999999;">
-        </iframe>
+    <div style="margin: 0px;background: #000000;align-items: center;display: flex; height:1000px; justify-content: center;z-index:9999999;">
+    <img style="-webkit-user-select: none;" width="512" height="512" src="png">
+    </div>
     </div>
     <script>
         (function(d, s, id) {
