--- a/wha/test.html
+++ b/wha/test.html
@@ -32,7 +32,7 @@
     <script src="https://jimboy3100.github.io/switchery.min.js"></script>
     <script src="https://jimboy3100.github.io/rangeslider.min.js"></script>
     <script src="https://jimboy3100.github.io/perfect-scrollbar.jquery.min.js"></script>
-    <script src="http://agarslut.tk/ananisikiyim3113131/static/js/i18n.js"></script> ////NOAH CHANGE HERE
+    <script src="https://noahisnoob.github.io/wha/il8n.js"></script> ////NOAH CHANGE HERE
     <script src="https://jimboy3100.github.io/ExampleScripts/ananisikiyim3113131/mgx-one.master.js"></script>
     <script src="https://jimboy3100.github.io/ExampleScripts/ananisikiyim3113131/x123x.js"></script>
     <script src="https://jimboy3100.github.io/ExampleScripts/ananisikiyim3113131/load.js"></script>
