--- a/Mgx/index.html
+++ b/Mgx/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Agar.io</title>
-    <link id="favicon" rel="icon" type="image/png" href="https://noahisnoob.github.io/Mgx/wack.gif" />
+    <link id="favicon" rel="icon" type="image/png" href="https://noahisnoob.github.io/Mgx/images.jpg" />
     <link rel="stylesheet" href="https://noahisnoob.github.io/Mgx/master.css">
     <link rel="stylesheet" href="https://noahisnoob.github.io/Mgx/bootstrap-colorpicker.min.css">
     </link>
@@ -42,7 +42,7 @@
     <div id="fb-root"></div>
     <div id="imagebig">
     <div style="margin: 0px;background: #000000;align-items: center;display: flex; height:1000px; justify-content: center;z-index:9999999;">
-    <img style="-webkit-user-select: none;" width="512" height="512" src="https://noahisnoob.github.io/Mgx/wack.gif">
+    <img style="-webkit-user-select: none;" width="512" height="512" src="https://noahisnoob.github.io/Mgx/images.jpg">
     </div>
     </div>
     <script>
@@ -257,7 +257,7 @@
             <canvas id="minimap"></canvas>
         </div>
         <div id="target-hud" class="hud">
-            <div id="target-player"><span id="target-skin"><img src="http://agarslut.tk/ananisikiyim3113131/static/img/blank.png" alt=""> </span><span id="target-nick"></span> <span id="target-status" class="hud-main-color">[Target Not Set]</span></div>
+            <div id="target-player"><span id="target-skin"><img src="https://noahisnoob.github.io/Mgx/images.jpg" alt=""> </span><span id="target-nick"></span> <span id="target-status" class="hud-main-color">[Target Not Set]</span></div>
             <div id="target-summary"></div>
         </div>
         <div id="target-panel-hud" class="hud"><a href="#" id="set-targeting" class="ogicon-target"></a><a href="#" id="set-private-minimap" class="ogicon-location2"></a><a href="#" id="cancel-targeting" class="ogicon-cancel-circle"></a><a href="#" id="change-target" class="ogicon-arrow-right"></a></div>
